Readme и финальные правки
